--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravelcollective/html": "^5.6",
         "intervention/image": "^2.4",
         "ramsey/uuid": "^3.8",
-        "tymon/jwt-auth": "0.5.*"
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
